# maplestory_builder

./: .gitignore  README.md  pubspec.yaml
python_dev_scripts/: pyproject.toml  type_output.json  update_consumables.py  update_equips.py  update_equips_from_wz.py  update_familiar_badges.py  update_skills_from_wz.py
python_dev_scripts/src/developer_scripts/conversion/: maplestory_builder_stat_enums.py
python_dev_scripts/src/developer_scripts/wz_utilities/: __init__.py  utilities.py  wz_finder.py  wz_loader.py  wz_skill.py  wz_string_linker.py
python_dev_scripts/src/developer_scripts/wz_utilities/consumable/: consumable.py  ignored_consumable_ids.json  prop_type.py
python_dev_scripts/src/developer_scripts/wz_utilities/equipment/: set_item.py  set_item_effect.py  set_item_id_list.py
python_dev_scripts/src/developer_scripts/wz_utilities/familiars/: familiar_badge.py
python_dev_scripts/src/developer_scripts/wz_utilities/items/: potential.py  set_item.py  set_item_effect.py  set_item_id_list.py  set_item_id_part.py
python_dev_scripts/src/developer_scripts/wz_utilities/lib/: DumpImages.lua  Helper.lua  Setting.config  WzComparerR2.deps.json
python_dev_scripts/src/developer_scripts/wz_utilities/lib/Plugin/WzComparerR2.Avatar/: WzComparerR2.Avatar.deps.json
python_dev_scripts/src/developer_scripts/wz_utilities/lib/Plugin/WzComparerR2.LuaConsole/: WzComparerR2.LuaConsole.deps.json
python_dev_scripts/src/developer_scripts/wz_utilities/lib/Plugin/WzComparerR2.MapRender/: WzComparerR2.MapRender.deps.json
python_dev_scripts/src/developer_scripts/wz_utilities/lib/Plugin/WzComparerR2.Network/: WzComparerR2.Network.deps.json  (+1 more)
python_dev_scripts/wz_utilities/: __init__.py  utilities.py  wz_finder.py  wz_loader.py  wz_skill.py  wz_string_linker.py
python_dev_scripts/wz_utilities/lib/: Setting.config  WzComparerR2.exe.config
(+149 files in other folders)
